[package]
name = "blockochen"
version = "0.1.0"
edition = "2021"

[dependencies]
#hex-literal = "0.3"
hex = "0.4.3"
serde = { version = "1", features = ["derive", ] }
serde_json = "1.0.81"
sha2 = "0.10"
indexmap = { version = "1.8", features = ["serde", ] }
anyhow = "1.0.57"

[dev-dependencies]
wasm-bindgen-test = "0.3"
